test/domains/vass/assoc-idxtype-error-1.good
assoc-idxtype-error-1.chpl:24: error: Default Associative domains with idxType=domain(1,int(64),false) are not allowed
